<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:id="@+id/downloadUrl"
            android:hint="@string/url_hint"
            android:text="@string/default_url" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:id="@+id/downloadButton" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_mode"
        android:id="@+id/downloadMode" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/monalisa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:id="@+id/rotateLeftButton"
            android:background="@drawable/left" />

        <ImageButton
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:layout_margin="@dimen/info_margin"
            android:id="@+id/infoButton"
            android:background="@drawable/info" />

        <ImageButton
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:id="@+id/rotateRightButton"
            android:background="@drawable/right" />
    </LinearLayout>
</LinearLayout>
